# router/routes.go
@@ -15,12 +15,17 @@ func initializeRoutes(router *gin.Engine) {
 
 	v1 := router.Group(basePath)
 	{
+		// Auth
+		v1.POST("/login", handler.LoginHandler)
+	}
+	{
 		// Users
 		v1.POST("/user", handler.CreateUserHandler)
 		v1.PUT("/user", handler.UpdateUserHandler)
 		v1.DELETE("/user", handler.DeleteUserHandler)
 		v1.GET("/user", handler.ShowUserHandler)
 		v1.GET("/users", handler.ListUsersHandler)
+		v1.GET("/me", handler.RequireAuth, handler.ShowMeHandler)
 	}
 
 	router.GET("/docs/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
